Fix style missalignments on index page

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -20,28 +20,36 @@
     // box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
   }
 
-
   .container {
     // width: auto;
     margin: 0 0 20px 0;
     padding-left: 0;
     padding-right: 0;
+
+    &> div:first-child {
+      margin-bottom: 10px;
+
+      .btn-gemfinder {
+        padding: 0;
+      }
+    }
+
     .filters {
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
+
       p, button {
         flex: 0 0 25%;
         font-size: 20px;
         margin-bottom: 0;
       }
+
       button {
         font-weight: bold;
       }
     }
   }
-
-
 
   .row {
     display: flex;
@@ -150,14 +158,14 @@
   }
 }
 
-.james {
-  display: flex !important;
-  justify-content: space-between !important;
-  h3 {
-    text-align: center;
-    margin: 5px;
-  }
-}
+// .james {
+//   display: flex !important;
+//   justify-content: space-between !important;
+//   h3 {
+//     text-align: center;
+//     margin: 5px;
+//   }
+// }
 
 .property-card-link {
   position: absolute;
@@ -260,4 +268,3 @@
   text-align: center;
   font-family: 'Open Sans', sans-serif;
 }
-
